@@ -1,9 +1,11 @@
 package com.ludicamente.Ludicamente.config;
 
 import com.ludicamente.Ludicamente.auth.userdetails.CompositeUserDetailsService;
+import com.ludicamente.Ludicamente.config.JwtAuthenticationFilter;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
@@ -15,8 +17,8 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.List;
@@ -63,15 +65,30 @@ public class SecurityConfig {
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers(
-                                "/api/auth/**", "/api/upload/image", "/api/gallery/**",
-                                "/api/chatbot/**", "/api/files/upload", "/api/servicios/categoria/**",
-                                "/api/categorias/**", "/api/pago/**",
-                                "/v3/api-docs/**", "/swagger-ui/**", "/swagger-resources/**",
-                                "/error", "/favicon.ico", "/resources/**",
+                                "/api/auth/**",
+                                "/api/chatbot/**",
+                                "/api/upload/image",
+                                "/api/gallery/images",
+                                "/api/gallery/hide-image",
+                                "/api/gallery/show-image",
+                                "/api/gallery/hidden-images",
+                                "/api/files/upload",
+                                "/api/servicios/categoria/**",
+                                "/api/categorias/**",
+                                "/api/pago/**",
+                                "/api/pagos/crear-preferencia",
+                                "/api/pagos/webhook",
                                 "/api/acudiente/contar",
-                                "/api/niños/contar-por-genero"
-                                "/error", "/favicon.ico", "/resources/**","/api/pagos/crear-preferencia", "/api/pagos/webhook"
+                                "/api/niños/contar-por-genero",
+                                "/v3/api-docs/**",
+                                "/swagger-ui/**",
+                                "/swagger-resources/**",
+                                "/error",
+                                "/favicon.ico",
+                                "/api/posts",
+                                "/resources/**"
                         ).permitAll()
                         .anyRequest().authenticated()
                 )
@@ -85,9 +102,8 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        // soporta múltiples orígenes separados por coma
         config.setAllowedOriginPatterns(List.of(allowedOrigins.split(",")));
-        config.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","OPTIONS"));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
 
